Fix header stretched the whole page and scroller appeared

--- a/src/ProductConstructionService/ProductConstructionService.BarViz/wwwroot/css/app.css
+++ b/src/ProductConstructionService/ProductConstructionService.BarViz/wwwroot/css/app.css
@@ -21,7 +21,7 @@ body {
 }
 
 .content {
-    padding: 0.5rem 1.5rem;
+    padding: 1rem 1.5rem 0 1.5rem;
     align-self: stretch !important;
     width: 100%;
     padding-top: 20px;
